[gd_scene load_steps=4 format=3 uid="uid://cmrs264a1r0m6"]

[ext_resource type="Script" uid="uid://csmuxtqmmbdx1" path="res://src/Scripts/orbit_camera.gd" id="1_fb3q8"]
[ext_resource type="Script" uid="uid://cb3rrmj43d7w4" path="res://src/Scripts/camera_collision.gd" id="1_txh35"]
[ext_resource type="PackedScene" uid="uid://bbhexnglp5diq" path="res://src/Scenes/grappling_hook.tscn" id="3_vvl4l"]

[node name="OrbitCamera" type="Node3D"]
script = ExtResource("1_fb3q8")

[node name="YawPivot" type="Node3D" parent="."]

[node name="PitchPivot" type="Node3D" parent="YawPivot"]

[node name="CameraRay" type="RayCast3D" parent="YawPivot/PitchPivot"]
target_position = Vector3(0, 0, 5.5)

[node name="DirectRay" type="RayCast3D" parent="YawPivot/PitchPivot"]

[node name="Camera3D" type="Camera3D" parent="YawPivot/PitchPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.45519e-11, 1.45519e-11, 3.5)
script = ExtResource("1_txh35")

[node name="GrapplingHook" parent="YawPivot/PitchPivot/Camera3D" instance=ExtResource("3_vvl4l")]

[node name="CameraPosTarget" type="Node3D" parent="YawPivot/PitchPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.45519e-11, 1.45519e-11, 3.5)

[node name="CameraPosTargetFine" type="Node3D" parent="YawPivot/PitchPivot/CameraPosTarget"]
